--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img id="carousel-item-1-img" class="d-block w-100 img-fluid" src="./img/streetart_1.jpg" alt="First slide">
+                                    <img id="carousel-item-1-img" class="d-block img-fluid" src="./img/streetart_1.jpg" alt="First slide">
                                     <div class="carousel-caption d-none d-sm-block cons-carousel-caption">
                                         <h5 class="cons-display-font">Cool Vista</h5>
                                         <p class="d-none d-md-block">I hear the jury's still out on science. It's called 'taking advantage.' It's what
@@ -113,7 +113,7 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img id="carousel-item-2-img" class="d-block w-100 img-fluid" src="./img/streetart_2.jpg" alt="Second slide">
+                                    <img id="carousel-item-2-img" class="d-block img-fluid" src="./img/streetart_2.jpg" alt="Second slide">
                                     <div class="carousel-caption d-none d-sm-block cons-carousel-caption">
                                         <h5 class="cons-display-font">Political Satire</h5>
                                         <p class="d-none d-md-block">Get me a vodka rocks. And a piece of toast. That's why you always leave a note! It's
@@ -122,7 +122,7 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img id="carousel-item-3-img" class="d-block w-100 img-fluid" src="./img/streetart_3.jpg" alt="Third slide">
+                                    <img id="carousel-item-3-img" class="d-block img-fluid" src="./img/streetart_3.jpg" alt="Third slide">
                                     <div class="carousel-caption d-none d-sm-block cons-carousel-caption">
                                         <h5 class="cons-display-font">Buenos Aires Bunny</h5>
                                         <p class="d-none d-md-block">We just call it a sausage. It's called 'taking advantage.' It's what gets you ahead
